clang/test/BSC/Trait/r1/definition_10.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

trait F {
  int foo(This* this);
};

impl trait F for trait F;  // expected-error {{invalid syntax, semi not expected after 'trait 'F''}}
                           // expected-error@-1 {{can not find 'foo' of 'trait F' in 'trait F'}}

int main() {
  return 0;
}
